# freecad.workbench_starterkit

./: .gitignore  MANIFEST.in  Makefile  README.md  cookiecutter.json  pyproject.toml  setup.py
docs/: commands.md
freecad/: __init__.py
freecad/modules/template_extension/: init_gui.py
freecad/template_extension/: __init__.py  init_gui.py
freecad/workbench_starterkit/: init_gui.py
freecad/workbench_starterkit/resources/translations/: update_translation.sh  workbench_starterkit_es-ES.qm  workbench_starterkit_es-ES.ts
freecad/{{cookiecutter.workbench_dir_name}}/: init_gui.py
freecad/{{cookiecutter.workbench_dir_name}}/resources/translations/: update_translation.sh  workbench_starterkit_es-ES.ts
hooks/: pre_gen_project.py
{{cookiecutter.workbench_project_name}}/: .codespellrc  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  pixi.toml  pyproject.toml  setup.py
{{cookiecutter.workbench_project_name}}/freecad/{{cookiecutter.workbench_dir_name}}/: TranslateUtils.py  init_gui.py
{{cookiecutter.workbench_project_name}}/freecad/{{cookiecutter.workbench_module_name}}/: TranslateUtils.py  __init__.py  init_gui.py  translate_utils.py  version.py
{{cookiecutter.workbench_project_name}}/freecad/{{cookiecutter.workbench_module_name}}/resources/translations/: README.md  update_translation.sh  workbench_starterkit_es-ES.ts  {{cookiecutter.workbench_module_name}}_es-ES.ts
